--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg-xml" href="https://corporativokallpa.com/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="application-name" content="Corporativo Kallpa - Gestión de expedientes" />
+		<meta name="keywords" content="estudio de abogados, abogados, expedientes, arequipa, asesoria integral, empresas, corporativo kallpa" />
+		<meta name="description" content="Gestión de expedientes." />
+		<meta name="author" content="Corporativo Kallpa" />
+		<meta property="og:type" content="abogados" />
+		<meta property="og:title" content="Corporativo Kallpa - Gestión de expedientes" />
+    <meta property="og:description" content="Gestión de expedientes." />
+    <meta property="og:image" content="https://corporativokallpa.com/images/logo.png" />
+    <meta property="og:url" content="https://corporativokallpa.com/" />
+		<meta property="og:site_name" content="Corporativo Kallpa" />
     <title>Corporativo Kallpa - Expedientes</title>
   </head>
   <body>
