--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg-xml" href="https://corporativokallpa.com/favicon.svg" />
+  <link rel="icon" type="image/svg-xml" href="https://corporativokallpa.com/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="application-name" content="Corporativo Kallpa - Gestión de expedientes" />
   <meta name="keywords"
