--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -5,10 +5,20 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg-xml" href="https://corporativokallpa.com/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Corporativo Kallpa - Expedientes</title>
+  <meta name="description" content="Gestión de expedientes." />
+  <meta name="theme-color" content="#112545">
+  <meta name="MobileOptimized" content="width">
+  <meta name="HandheldFriendly" content="true">
+  <meta name="apple-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="shortcut icon" type="image/png" href="/logo.png">
+  <link rel="apple-touch-icon" href="./logo.png">
+  <link rel="apple-touch-startup-image" href="./logo.png">
+  <link rel="manifest" href="/manifest.json">
   <meta name="application-name" content="Corporativo Kallpa - Gestión de expedientes" />
   <meta name="keywords"
     content="estudio de abogados, abogados, expedientes, arequipa, asesoria integral, empresas, corporativo kallpa" />
-  <meta name="description" content="Gestión de expedientes." />
   <meta name="author" content="Corporativo Kallpa" />
   <meta property="og:type" content="abogados" />
   <meta property="og:title" content="Corporativo Kallpa - Gestión de expedientes" />
@@ -16,7 +26,6 @@
   <meta property="og:image" content="https://corporativokallpa.com/images/logo.png" />
   <meta property="og:url" content="https://corporativokallpa.com/" />
   <meta property="og:site_name" content="Corporativo Kallpa" />
-  <title>Corporativo Kallpa - Expedientes</title>
 </head>
 
 <body>
